bk_ida/gccida/c1/expand_builtin_return_addr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return_addr/src/builtins.c:849:34: error: must use 'enum' tag to refer to type 'built_in_function'
rtx  expand_builtin_return_addr( built_in_function fndecl_code, int count, rtx tem) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return_addr/src/builtins.c:867:24: error: use of undeclared identifier 'machine_mode'
v6 = memory_address( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), tem); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return_addr/src/builtins.c:868:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v6); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return_addr/src/builtins.c:890:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_MEM( ( machine_mode)v10, v12); 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return_addr/src/obj/builtins.o] Error 1
